tests/specs/check/check_workspace/check_config_flag.out
Check (tsc [WILDLINE])
TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
WorkerGlobalScope;
~~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:8:1

TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
WorkerGlobalScope;
~~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/member/mod.ts:5:1

Found 2 errors.

error: Type checking failed.
